# synapse

./: .env.example  .gitignore  AGENTS.md  Agent.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  PRIVACY.md  README.md  TESTING.md  accessibility-checklist.md  css-fixes-summary.md  docker-compose.yml  index.html  package.json  pyproject.toml  run-tests.js  test-animations.js  test-breakpoints.js  test-browser-compatibility.js  test-email-validation.js  test-forms.html  test-performance.html  test-responsive.html  test-results.json  test-results.xml  test-runner.html  test-scroll-animations.html  test-suite.js  validate-css.js  validate-responsive.js
.github/workflows/: ci.yml
deploy/: .env.staging.example  Caddyfile  docker-compose.staging.yml
docs/: agent-prompts.md  architecture.md  deploy.md  deployment.md  implementation-checklist.md  master-roadmap.md  phase-0-verification.md  phase-1-verification.md  repo-map.md  roadmap.md  test-corpus.md
eval/: contracts.md
scripts/: animations.js  check_staging.sh  debug_docling_convert.py  deploy_staging.sh  evaluate_golden_ingest.sh  evaluate_ingest.py  forms.js  main.js  run_golden_ingest.sh  run_golden_ingest_isolated.sh  run_ingest_smoke.sh  sync_test_corpus.sh
styles/: animations.css  components.css  main.css
test_corpus/: README.md  corpus-manifest.json  corpus-manifest.template.json
tests/: test_cli.py  test_config.py  test_docling_adapter.py  test_domain_contracts.py  test_evaluation.py  test_grobid_adapter.py  test_ingest_io.py  test_ingest_merge.py  test_runtime_health.py  test_server.py  test_services.py
(+28 files in other folders)
