[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "synapse"
version = "0.1.0"
description = "CLI-first research context layer for systematic reviews."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Tim Smykov" }
]
dependencies = [
  "fastapi>=0.115",
  "pydantic-settings>=2.4",
  "rich>=13.7",
  "typer>=0.12",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.3",
  "ruff>=0.6",
]
storage = [
  "celery>=5.4",
  "minio>=7.2",
  "pgvector>=0.3",
  "psycopg[binary]>=3.2",
  "redis>=5.0",
  "sqlalchemy>=2.0",
]
research = [
  "docling>=2.0",
  "grobid-client-python>=0.0.8",
  "llama-index-core>=0.11",
]

[project.scripts]
synapse = "synapse.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/synapse"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
